# MailTM

./: README.md  mailtm.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
mailtm/: __init__.py  mailtm.py
mailtm/schemas/: account.py  domains.py  message.py
mailtm/utils/: exceptions.py  misc.py
schemas/: account.py  domains.py  message.py
utils/: misc.py
